<resources>
    <string name="app_name">Registration Form</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="interests">Interests</string>
    <string name="interest_sports">Sports</string>
    <string name="interest_music">Music</string>
    <string name="interest_tech">Tech</string>
    <string name="birth_date">Birth Date</string>
    <string name="birth_time">Birth Time</string>
    <string name="submit">Submit</string>
</resources>
